feat: add nw type
