# src/routes/networth.go
@@ -10,6 +10,22 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+type NetworthResult struct {
+	Networth            float64                  `json:"networth"`
+	UnsoulboundNetworth float64                  `json:"unsoulboundNetworth"`
+	NoInventory         bool                     `json:"noInventory"`
+	IsNonCosmetic       bool                     `json:"isNonCosmetic"`
+	Purse               float64                  `json:"purse"`
+	Bank                float64                  `json:"bank"`
+	PersonalBank        float64                  `json:"personalBank"`
+	Types               map[string]*NetworthType `json:"types"`
+}
+
+type NetworthType struct {
+	Total            float64 `json:"total"`
+	UnsoulboundTotal float64 `json:"unsoulboundTotal"`
+}
+
 // NetworthHandler godoc
 // @Summary Get networth of a specified player
 // @Description Returns networth for the given user and profile ID
@@ -17,7 +33,7 @@ import (
 // @Produce  json
 // @Param uuid path string true "User UUID"
 // @Param profileId path string true "Profile ID"
-// @Success 200 {object} map[string]any
+// @Success 200 {object} map[string]NetworthResult
 // @Failure 400 {object} models.ProcessingError
 // @Failure 500 {object} models.ProcessingError
 // @Router /api/networth/{uuid}/{profileId} [get]
